Fix: bolt 30%, shifted left

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -656,10 +656,10 @@ ul {
         display: inline-block;
         svg {
           position: absolute;
-          top: 37.5%;
-          left: 37.5%;
-          width: 25%;
-          height: 25%;
+          top: 35%;
+          left: 30%;
+          width: 30%;
+          height: 30%;
         }
       }
     }
